Add all subjects

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,13 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
   <a href="/">Home</a>
-  <a href="/">Math</a>
-  <a href="/">History</a>
+  <a href="/Mathematics">Mathematics</a>
+  <a href="/History">History</a>
+  <a href="/Portuguese">Portuguese</a>
+  <a href="/English (Secondary Language)">English (Secondary Language)</a>
+  <a href="/Physics and Chemistry">Physics and Chemistry</a>
+  <a href="/Biology">Biology</a>
+  <a href="/Philosophy">Philosophy</a>
 </nav>
 <section class="content">
   <header>
