--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,13 @@
 
 <h2>Subject options</h2>
 <ul>
-  <li><a href="/mathematics">Math</a></li>
-  <li><a href="/history">History</a></li>
+  <li><a href="/Mathematics">Mathematics</a></li>
+  <li><a href="/History">History</a></li>
+  <li><a href="/Portuguese">Portuguese</a></li>
+  <li><a href="/English (Secondary Language)">English (Secondary Language)</a></li>
+  <li><a href="/Physics and Chemistry">Physics and Chemistry</a></li>
+  <li><a href="/Biology">Biology</a></li>
+  <li><a href="/Philosophy">Philosophy</a></li>
 </ul>
 
 {% endblock %}
