--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   <a href="/Portuguese">Portuguese</a>
   <a href="/English (Secondary Language)">English (Secondary Language)</a>
   <a href="/Physics and Chemistry">Physics and Chemistry</a>
-  <a href="/Biology">Biology</a>
+  <a href="/Biology and Geology">Biology and Geology</a>
   <a href="/Philosophy">Philosophy</a>
 </nav>
 <section class="content">
