--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <li><a href="/Portuguese">Portuguese</a></li>
   <li><a href="/English (Secondary Language)">English (Secondary Language)</a></li>
   <li><a href="/Physics and Chemistry">Physics and Chemistry</a></li>
-  <li><a href="/Biology">Biology</a></li>
+  <li><a href="/Biology and Geology">Biology and Geology</a></li>
   <li><a href="/Philosophy">Philosophy</a></li>
 </ul>
 
