--- a/static/style.css
+++ b/static/style.css
@@ -1,26 +1,13 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: Helvetica, arial, sans-serif;
     font-size: 14px;
-    line-height: 1.6;
-    padding-top: 10px;
-    padding-bottom: 10px;
     background-color: white;
-    padding: 30px;
-}
-
-a {
-    color: #4183C4;
-}
-
-a.anchor {
-    display: block;
-    padding-left: 30px;
-    margin-left: -30px;
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
 }
 
 h1,
@@ -37,57 +24,15 @@ h6 {
     position: relative;
 }
 
-h1:hover a.anchor,
-h2:hover a.anchor,
-h3:hover a.anchor,
-h4:hover a.anchor,
-h5:hover a.anchor,
-h6:hover a.anchor {
-    background: red 10px center;
-    text-decoration: none;
-}
-
 h1 {
     font-size: 28px;
     color: black;
-}
-
-h2 {
-    font-size: 24px;
-    border-bottom: 1px solid #cccccc;
-    color: black;
-}
-
-h3 {
-    font-size: 18px;
-}
-
-h4 {
-    font-size: 16px;
-}
-
-h5 {
-    font-size: 14px;
-}
-
-h6 {
-    color: #777777;
-    font-size: 14px;
 }
 
 p,
 ul,
 li {
     margin: 15px 0;
-}
-
-h1 p,
-h2 p,
-h3 p,
-h4 p,
-h5 p,
-h6 p {
-    margin-top: 0;
 }
 
 li p.first {
@@ -106,13 +51,56 @@ ul :first-child {
     margin-top: 0;
 }
 
-@media screen and (min-width: 914px) {
-    body {
-        width: 854px;
-        margin: 0 auto;
-    }
+
+nav {
+    overflow: hidden;
+    background-color: #1a1a1a;
+    top: 0;
+    width: 100%;
+    font-size: 17px;
 }
 
 nav a {
-    color: #cc0000;
+    overflow: hidden;
+    background-color: inherit;
+    color: inherit;
+    text-decoration: none;
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 24px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #333333;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    overflow: hidden;
+    background-color: #1a1a1a;
+    display: block;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 8px;
+}
+
+footer p {
+    overflow: hidden;
+    background-color: #1a1a1a;
+    color: white;
+    text-align: center;
+    font-size: 14px;
+    letter-spacing: normal;
+    padding-bottom: 10px;
+}
+
+header, title, p form {
+    text-align: center;
 }
