--- a/templates/subject.html
+++ b/templates/subject.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<h1>{% block title %}High School {{ subject }} Tutor{% endblock %}</h1>
+<h1>{% block title %}High School Tutor - {{ subject }}{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
