--- a/static/style.css
+++ b/static/style.css
@@ -43,13 +43,7 @@ li {
     margin: 0;
 }
 
-ul {
-    padding-left: 30px;
-}
 
-ul :first-child {
-    margin-top: 0;
-}
 
 
 nav {
@@ -61,10 +55,6 @@ nav {
 }
 
 nav a {
-    overflow: hidden;
-    background-color: inherit;
-    color: inherit;
-    text-decoration: none;
     float: left;
     display: block;
     color: white;
@@ -103,4 +93,32 @@ footer p {
 
 header, title, p form {
     text-align: center;
+}
+
+/*h2, ul {
+    margin-left: 15%;
+    margin-right: 15%;
+}*/
+
+h2, ul {
+    text-align: center;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    padding-bottom: 5px;
+}
+
+a {
+    overflow: hidden;
+    background-color: inherit;
+    color: inherit;
+    text-decoration: none;
+}
+
+ul li a:hover {
+    color:crimson;
 }
