--- a/static/style.css
+++ b/static/style.css
@@ -19,14 +19,6 @@ h6 {
     margin: 20px 0 10px;
     padding: 0;
     font-weight: bold;
-    -webkit-font-smoothing: antialiased;
-    cursor: text;
-    position: relative;
-}
-
-h1 {
-    font-size: 36px;
-    color: black;
 }
 
 p {
@@ -95,9 +87,14 @@ header, title, p form {
     text-align: center;
 }
 
-p {
+/*p {
     margin-left: 15%;
     margin-right: 15%;
+}*/
+
+form {
+    width: 50%;  /* or whatever width you prefer */
+    margin: auto;
 }
 
 h2, ul {
