--- a/templates/subject.html
+++ b/templates/subject.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<p>{{ conversation | safe }}</p>
+<p class="conversation">{{ conversation | safe }}</p>
 
 
 <p>
