--- a/templates/subject.html
+++ b/templates/subject.html
@@ -5,7 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<p class="conversation">{{ conversation | safe }}</p>
+<div class="conversation">
+  {{ conversation | safe }}
+</div>
 
 
 <p>
