--- a/static/style.css
+++ b/static/style.css
@@ -129,36 +129,34 @@ ul li a:hover {
 
 
 input[type=submit] {
-    background-color: #06b39a; /* green */
+    background-color: #06b39a;
     border: none;
     color: white;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;  /* makes it circular */
+    width: 80px;
+    height: 40px;
+    border-radius: 20px;
     padding: 0;
     cursor: pointer;
 }
 
-input[type=submit]:before {
-    content: "\2192";
-    font-size: 20px;
+input[type=submit]:hover {
+    background-color: #035f52;
 }
-
 
 input[type=text] {
     width: 85%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    border: 1px solid #035f52;
+    border: 1px solid #06b39a;
     -webkit-transition: 0.5s;
     transition: 0.5s;
     outline: none;
-    border-radius: 10%;
+    border-radius: 20px;
 }
 
 input[type=text]:focus {
