--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,9 @@ body {
     font-family: Helvetica, arial, sans-serif;
     font-size: 14px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 h1,
@@ -60,7 +63,8 @@ nav a:hover {
 }
 
 footer {
-    position: fixed;
+    position: static;
+    margin-top: auto;
     bottom: 0;
     width: 100%;
     overflow: hidden;
