--- a/templates/subject.html
+++ b/templates/subject.html
@@ -13,7 +13,7 @@
 <p>
   <form method="POST">
     <input type="text" name="data" placeholder="Ask your questions here!">
-    <input type="submit" value="">
+    <button type="submit"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
   </form>
 </p>
 
